crates/oomtop-tui/tests/snapshots/render__calm_80_16.snap
---
source: crates/oomtop-tui/tests/render.rs
expression: styled(&buf)
---
  E0[|||      21.5%]  E3[          2.0%]  P6[||||||   42.4%]  P9[||       11.8%]
.aaabcccddddddaaaaab.aaabddddddddddaaaab.aaabccccccdddaaaaab.aaabccdddddddaaaaab
  E1[||       16.0%]  E4[          1.3%]  P7[|||||||||78.0%]
.aaabccdddddddaaaaab.aaabddddddddddaaaab.aaabeeeeeeeeeaaaaab
  E2[|         6.7%]  E5[          0.7%]  P8[|||||||||93.1%]
.aaabcdddddddddaaaab.aaabddddddddddaaaab.aaabfffffffffaaaaab
 Mem[|||||||||#############*20.5G/24.0G]  Tasks: 761, 3412 thr; 3 running
.aaab.........bbbbbbbbbbbbbdaaaaaaaaaaab..aaaaaaabbbaabbbbaaaaaabaaaaaaaa
 Swp[                           0B/7.0G]  Load average: 3.20 2.74 2.41
.aaabdddddddddddddddddddddddddddaaaaaaab..aaaaaaaaaaaaaabbbb
 GPU[||||||||||||||||||||         58.0%]  Uptime: 58 days, 11:23:04
.aaabccccccccccccccccccccdddddddddaaaaab..aaaaaaaabbbbbbbbbbbbbbbbb
 All good — 3.1 GiB free. Your things: sd-server idle, 4 Claude Code sessions.
.bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
 MEM |apps 6.0G #gpu 9.9G *cmp 1.6G =wired 3.0G .cache 3.8G free 9.0G
aaaa..aaaaa.....baaaa.....daaaa.....gaaaaaa.....aaaaaaa.....aaaaa
 SWAP 0B / 7.0G  ⠀⠀⠀⠀⠀⠀  ● -60.0M/min   headroom 1.2G
aaaaaahhhhhhhhh........cccccccccccccc
 oomtop  [1 Home] 2 3 4 5 6                                  ● Normal  bat 29%
bbbbbbbb.bbbbbbbb.b.b.b.b.b..................................cccccccc
─ Your things ──────────────────────────────────────────────────────────────────
ddaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio  9.9G  idle    Claude Code ×4  1.4G

─ Ranked ──────────────────────────────────────── / filter · : command · i why ─
ddaaaaaaaddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ▸ sd-server · qwen-image…                    9.9G  ⣰⣦⣰⣄⣷⣼    85%
iiijjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkkkkkkllllllllllllllllllllllllkkkkkkkkkkkkkkk
   Google Chrome (14)                         2.9G  ⣶⣄⣦⣸⣦⣷     6%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude desktop VM                         ≥1.5G  ⣦⣰⣄⣷⣼⣦     2%  sandbox
bbbhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa........................hhhhhhhhhhhhhhh
   Claude Code · 3f2a (2)                     350M  ⣄⣷⣄⣶⣼⣦     4%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   ChatGPT / Codex (6)                        1.0G  ⣄⣦⣸⣦⣷⣤     2%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   clang                                      120M  ⣰⣦⣰⣄⣷⣼    30%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude                                     420M  ⣰⣄⣷⣼⣦⣼     1%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · d4e5 (2)                     383M  ⣄⣦⣼⣦⣸⣦     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · a90b (2)                     372M  ⣰⣤⣷⣄⣶⣼     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   WindowServer                               410M  ⣦⣰⣦⣷⣄⣷     6%  protected
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · 7c11 (2)                     361M  ⣦⣸⣦⣰⣦⣷     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   oomtop (this)                             22.0M  ⣶⣄⣦⣸⣦⣷     1%  this
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa








F1Help F2Setup F3Search F4Filter F5Tree F6SortBy F7Why F8Reclaim F9Stop F10Quit
..lllll..llllll..lllllll..lllllll..lllll..lllllll..llll..llllllll..lllll...lllll
--- legend
a = dim
b = bold
c = fg:Green
d = fg:DarkGray
e = fg:Yellow
f = fg:Red bold
g = dim italic
h = italic
i = bold reverse
j = bold italic reverse
k = dim reverse
l = reverse
